--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
 importFrom("graphics", plot)
+importFrom("graphics", points)
 importFrom("methods", show)
 exportClasses(abparms)
 exportClasses(bound)
@@ -7,6 +8,7 @@ export(unirootDiscrete,designOBF,designOBFpower,designAb,
   stopTable,modify,print.stopTable,analyzeBound,analyzeBoundNBF,
     powerBsb,getTSalpha,getAlternative,prStop,EN,
     designSimon, designFixed, designFixedpower )
+exportMethods(points)
 exportMethods(plot)
 exportMethods(analyze)
 exportMethods(summary)
