--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,13 @@
-importFrom("graphics", plot)
-importFrom("graphics", points)
-importFrom("methods", show)
+#importFrom("graphics", plot)
+#importFrom("graphics", points)
+#importFrom("methods", show)
+importFrom("graphics", "par", "plot", "points", "plot.default", "axis", "polygon", "abline", "segments", "lines", "text", "box", "legend")
+importFrom("grDevices", "gray")
+importFrom("methods", "new", "show")
+importFrom("stats", "uniroot", "dbinom", "qbinom", "pbinom", "qnorm")
+importFrom("utils", "str", "write.csv")
+import(clinfun)
+
 exportClasses(abparms)
 exportClasses(bound)
 exportClasses(boundNBF)
@@ -13,4 +20,4 @@ exportMethods(plot)
 exportMethods(analyze)
 exportMethods(summary)
 S3method(print,stopTable)
-import(clinfun)
+
